--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,12 @@ filelock==3.12.0
 greenlet==2.0.2
 idna==3.4
 platformdirs==3.2.0
+PyQt6==6.5.0
+PyQt6-Qt6==6.5.0
+PyQt6-sip==13.5.1
+PySide6==6.5.0
+PySide6-Addons==6.5.0
+PySide6-Essentials==6.5.0
 requests==2.28.2
 shiboken6==6.5.0
 SQLAlchemy==2.0.10
